[package]
name = "pictura"
description = "Wallpaper manager"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/metafates/pictura"
authors = ["metafates"]
readme = "README.md"
keywords = ["wallpaper", "manager", "self-hosted", "cli", "image"]
license-file = "LICENSE"


[dependencies]
clap = { version = "3.2.15", features = ["cargo"] }
colored = "2.0.0"
toml = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
walkdir = "2.3.2"
rand = "0.8.5"
image = "0.24.3"
color-thief = "0.2.2"
handlebars = "4.3.3"
serde_json = "1.0.82"
pathdiff = "0.2.1"
regex = "1.6.0"
log = "0.4.17"
